Vlivery for post-it

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -152,11 +152,10 @@ background_color = 0,0,0
 htmlgauge00 = A32NX/ExtrasHost/extras-host.html,0,0,1,1
 
 [VPainting01]
-size_mm = 2048,512
-texture = $RegistrationNumber
-location = exterior
-
-painting00 = A32NX_Registration/Registration.html,	0, 0, 2048, 512
+size_mm				= 2048,512
+texture				= $RegistrationNumber
+location 			= exterior
+painting00=A32NX_Registration/Registration.html,	0, 0, 2048, 512
 
 [VPainting02]
 size_mm = 1024,1024
@@ -169,3 +168,10 @@ size_mm = 1024,1024
 pixel_size = 1024,1024
 texture = $PRINT_STATIC
 painting00 = A32NX_Printer/Printer.html?Index=1,	0, 0, 1024, 1024
+
+
+[VPainting04]
+size_mm=1024,1024
+pixel_size=1024,1024
+texture=POST-IT
+painting00=PostIT/PostIT.html,  0, 0, 1024, 1024
