--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -151,6 +151,14 @@ background_color = 0,0,0
 
 htmlgauge00 = A32NX/ExtrasHost/extras-host.html,0,0,1,1
 
+[VCockpit18]
+size_mm=1024,1024
+pixel_size=1024,1024
+texture=$POSTIT
+emissive=0
+
+htmlgauge00=Airliners/FlyByWire_A320_Neo/PostIT/PostIT.html,  0, 0, 1024, 1024
+
 [VPainting01]
 size_mm				= 2048,512
 texture				= $RegistrationNumber
