--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -154,10 +154,10 @@ htmlgauge00 = A32NX/ExtrasHost/extras-host.html,0,0,1,1
 [VCockpit18]
 size_mm=1024,1024
 pixel_size=1024,1024
-texture=$POSTIT
+texture=$POSTIT_EDIT
 emissive=0
 
-htmlgauge00=Airliners/FlyByWire_A320_Neo/PostIT/PostIT.html,  0, 0, 1024, 1024
+htmlgauge00=Airliners/FlyByWire_A320_Neo/PostIT_Edit/PostIT_Edit.html,  0, 0, 1024, 1024
 
 [VPainting01]
 size_mm				= 2048,512
@@ -181,5 +181,5 @@ painting00 = A32NX_Printer/Printer.html?Index=1,	0, 0, 1024, 1024
 [VPainting04]
 size_mm=1024,1024
 pixel_size=1024,1024
-texture=POST-IT
+texture=$POSTIT
 painting00=PostIT/PostIT.html,  0, 0, 1024, 1024
