--- a/package.json
+++ b/package.json
@@ -103,6 +103,8 @@
     "@types/react-router-dom": "~5.1.7",
     "@types/semver": "^7.3.13",
     "@typescript-eslint/eslint-plugin": "~4.14.2",
+    "esbuild": "^0.17.5",
+    "esbuild-plugin-copy": "^2.0.2",
     "@typescript-eslint/parser": "~4.14.2",
     "@vitejs/plugin-react": "^1.2.0",
     "autoprefixer": "^10.4.2",
@@ -170,6 +172,7 @@
     "immer": "^9.0.3",
     "lodash": "^4.17.20",
     "msfs-geo": "^0.1.0-alpha3",
+    "msfs-navdata": "^1.2.1",
     "@microsoft/msfs-sdk": "^0.4.0",
     "nanoid": "^3.3.1",
     "network": "^0.6.1",
