Added ClientEvent to replace Event

--- a/fbw-a32nx/src/wasm/extra-backend/CMakeLists.txt
+++ b/fbw-a32nx/src/wasm/extra-backend/CMakeLists.txt
@@ -86,6 +86,7 @@ set(SOURCES
         ${FBW_ROOT}/fbw-common/src/wasm/extra-backend/MsfsHandler/DataTypes/NamedVariable.cpp
         ${FBW_ROOT}/fbw-common/src/wasm/extra-backend/MsfsHandler/DataTypes/AircraftVariable.cpp
         ${FBW_ROOT}/fbw-common/src/wasm/extra-backend/MsfsHandler/DataTypes/Event.cpp
+        ${FBW_ROOT}/fbw-common/src/wasm/extra-backend/MsfsHandler/DataTypes/ClientEvent.cpp
         src/Gauge_Extra_Backend.cpp
         src/Example/ExampleModule.cpp
         src/LightingPresets/LightingPresets.cpp
@@ -93,7 +94,6 @@ set(SOURCES
         src/Pushback/InertialDampener.cpp
         src/AircraftPresets/AircraftPresets.cpp
         )
-
 # add all include directories here
 set(INCLUDES
         "${MSFS_SDK}/WASM/include"
