--- a/fbw-a380x/src/wasm/extra-backend/CMakeLists.txt
+++ b/fbw-a380x/src/wasm/extra-backend/CMakeLists.txt
@@ -61,6 +61,7 @@ set(SOURCES src/Gauge_Extra_Backend.cpp
         ${FBW_ROOT}/fbw-common/src/wasm/extra-backend/MsfsHandler/DataTypes/NamedVariable.cpp
         ${FBW_ROOT}/fbw-common/src/wasm/extra-backend/MsfsHandler/DataTypes/AircraftVariable.cpp
         ${FBW_ROOT}/fbw-common/src/wasm/extra-backend/MsfsHandler/DataTypes/Event.cpp
+        ${FBW_ROOT}/fbw-common/src/wasm/extra-backend/MsfsHandler/DataTypes/ClientEvent.cpp
         src/Example/ExampleModule.cpp
         src/LightingPresets/LightingPresets.cpp
         src/Pushback/Pushback.cpp
