Updated some documentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,4 +29,4 @@ add_subdirectory(fbw-a380x/src/wasm/fbw_a380)
 add_subdirectory(fbw-a32nx/src/wasm/extra-backend)
 add_subdirectory(fbw-a380x/src/wasm/extra-backend)
 
-add_subdirectory(fbw-a32nx/src/wasm/terronnd)
+#add_subdirectory(fbw-a32nx/src/wasm/terronnd)
