--- a/package.json
+++ b/package.json
@@ -28,9 +28,14 @@
     "build-a32nx:systems-host": "node fbw-a32nx/src/systems/systems-host/build.js",
     "build-a32nx:tcas": "node fbw-a32nx/src/systems/tcas/build.js",
 
+    "build-a32nx:pfd": "cd fbw-a32nx/src/systems/instruments/src/PFD && rollup -c",
+    "build-a32nx:clock": "cd fbw-a32nx/src/systems/instruments/src/Clock && rollup -c",
+    "build-a32nx:ewd": "cd fbw-a32nx/src/systems/instruments/src/EWD && rollup -c",
+
     "build-a32nx:fadec": "cd fbw-a32nx/src/wasm/fadec_a320 && ./build.sh && wasm-opt -O1 --signext-lowering  -o /external/fbw-a32nx/out/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/fadec.wasm /external/fbw-a32nx/out/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/fadec.wasm",
     "build-a32nx:fbw": "cd fbw-a32nx/src/wasm/fbw_a320 && ./build.sh && wasm-opt -O1 --signext-lowering  -o /external/fbw-a32nx/out/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/fbw.wasm /external/fbw-a32nx/out/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/fbw.wasm",
     "build-a32nx:systems": "cargo build -p a320_systems_wasm --target wasm32-wasi --release && wasm-opt -O1 --signext-lowering --enable-bulk-memory -o /external/fbw-a32nx/out/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/systems.wasm /external/target/wasm32-wasi/release/a320_systems_wasm.wasm",
+
     "build:extra-backend-cmake": "src/extra-backend/build-cmake.sh",
     "build:extra-backend-cmake-debug": "src/extra-backend/build-cmake.sh --debug",
     "build:extra-backend-cmake-clean": "src/extra-backend/build-cmake.sh --clean",
@@ -57,9 +62,9 @@
     "build-a380x:fadec": "cd fbw-a380x/src/wasm/fadec_a380 && ./build.sh && wasm-opt -O1 --signext-lowering  -o /external/fbw-a380x/out/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/fadec.wasm /external/fbw-a380x/out/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/fadec.wasm",
     "build-a380x:fbw": "cd fbw-a380x/src/wasm/fbw_a380 && ./build.sh && wasm-opt -O1 --signext-lowering  -o /external/fbw-a380x/out/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/fbw.wasm /external/fbw-a380x/out/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/fbw.wasm",
 
-    "build-a380x:extra-backend-cmake":       "fbw-a380x/src/wasm/extra-backend/build-cmake.sh",
-    "build-a380x:extra-backend-cmake-debug": "fbw-a380x/src/wasm/extra-backend/build-cmake.sh --debug",
-    "build-a380x:extra-backend-cmake-clean": "fbw-a380x/src/wasm/extra-backend/build-cmake.sh --clean",
+    "build-a380x:extra-backend-cmake":       "fbw-a380x/src/wasm/build-cmake.sh",
+    "build-a380x:extra-backend-cmake-debug": "fbw-a380x/src/wasm/build-cmake.sh --debug",
+    "build-a380x:extra-backend-cmake-clean": "fbw-a380x/src/wasm/build-cmake.sh --clean",
 
     "build-a380x:metadata": "node scripts/metadata.js fbw-a380x/out/flybywire-aircraft-a380-842 a380x",
     "build-a380x:manifest": "node scripts/build_a380x.js flybywire-aircraft-a380-842",
