restructure the scripts to use only the top-level script

--- a/fbw-a32nx/src/wasm/extra-backend/CMakeLists.txt
+++ b/fbw-a32nx/src/wasm/extra-backend/CMakeLists.txt
@@ -28,5 +28,5 @@ set(INCLUDE_FILES
 add_library(extra-backend-a32nx OBJECT ${SOURCE_FILES} ${INCLUDE_FILES})
 add_wasm_library(
     NAME extra-backend-a32nx
-    DEPENDENCIES extra-backend-a32nx extra-backend-common
+    DEPENDENCIES extra-backend-a32nx extra-backend-common-a32nx
 )
