--- a/fbw-a380x/src/wasm/extra-backend/CMakeLists.txt
+++ b/fbw-a380x/src/wasm/extra-backend/CMakeLists.txt
@@ -28,5 +28,5 @@ set(INCLUDE_FILES
 add_library(extra-backend-a380x OBJECT ${SOURCE_FILES} ${INCLUDE_FILES})
 add_wasm_library(
     NAME extra-backend-a380x
-    DEPENDENCIES extra-backend-a380x extra-backend-common
+    DEPENDENCIES extra-backend-a380x extra-backend-common-a380x
 )
