--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,32 +1,47 @@
-cmake_minimum_required(VERSION 3.19)
+cmake_minimum_required(VERSION 3.18)
+project(flybywire-aircraft C CXX)
 
-set(FBW_ROOT ${CMAKE_SOURCE_DIR})
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_VERBOSE_MAKEFILE OFF)
+set(FBW_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
+set(FBW_COMMON ${FBW_ROOT}/fbw-common/src/wasm)
 
-# Distinction between running on Windows for your IDE and Other for the docker container
-# This is not meant to be used to build on windows - it is just for the IDE (Clion) to understand the code
-if (WIN32)
-    message("OS: Windows")
-    set(MSFS_SDK "C:\\MSFS SDK")
-    set(CMAKE_C_COMPILER "C:/Program Files/LLVM/bin/clang.exe")
-    set(CMAKE_CXX_COMPILER "C:/Program Files/LLVM/bin/clang++.exe")
-    set(CMAKE_GENERATOR "Ninja")
-else ()
-    message("OS: Other")
-    set(MSFS_SDK "/workdir/MSFS_SDK")
-    set(CMAKE_C_COMPILER "clang")
-    set(CMAKE_CXX_COMPILER "clang++")
-    set(CMAKE_GENERATOR "Ninja")
-endif ()
+# cmake helper scripts
+include("${FBW_COMMON}/extra-backend/cmake/TargetDefinition.cmake")
 
-project(flybywire-aircraft)
+# compiler refinement
+set(COMPILER_FLAGS "-Wall -Wextra -Werror -Wno-unused-function -Wno-unused-command-line-argument -Wno-ignored-attributes -Wno-macro-redefined -target wasm32-unknown-wasi --sysroot \"${MSFS_SDK}/WASM/wasi-sysroot\" -mthread-model single -fno-exceptions -fms-extensions -fvisibility=hidden -ffunction-sections -fdata-sections -fno-stack-protector")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMPILER_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_FLAGS}")
 
-add_subdirectory(fbw-a32nx/src/wasm/fadec_a320)
-add_subdirectory(fbw-a380x/src/wasm/fadec_a380)
+# add the include paths
+include_directories(
+    "${MSFS_SDK}/WASM/include"
+    "${MSFS_SDK}/WASM/wasi-sysroot/include"
+    "${MSFS_SDK}/WASM/wasi-sysroot/include/c++/v1"
+    "${MSFS_SDK}/SimConnect SDK/include"
+    "${FBW_COMMON}/extra-backend/lib"
+    "${FBW_COMMON}/extra-backend/MsfsHandler"
+    "${FBW_COMMON}/extra-backend/MsfsHandler/DataTypes"
+)
 
-add_subdirectory(fbw-a32nx/src/wasm/fbw_a320)
-add_subdirectory(fbw-a380x/src/wasm/fbw_a380)
+# add compiler definitions
+add_definitions(
+    -D_MSFS_WASM=1
+    -D__wasi__
+    -D_LIBC_NO_EXCEPTIONS
+    -D_LIBCPP_HAS_NO_THREADS
+    -D_WINDLL
+    -D_MBCS
+    -DLOG_LEVEL=4
+    -DNO_EXAMPLES
+)
 
-add_subdirectory(fbw-a32nx/src/wasm/extra-backend)
-add_subdirectory(fbw-a380x/src/wasm/extra-backend)
+# add the common components
+add_subdirectory(fbw-common/src/wasm)
 
-#add_subdirectory(fbw-a32nx/src/wasm/terronnd)
+# add the A32NX components
+add_subdirectory(fbw-a32nx/src/wasm)
+
+# add the A380X components
+add_subdirectory(fbw-a380x/src/wasm)
