Fixed wasm debug build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.18)
 project(flybywire-aircraft C CXX)
 
 set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_VERBOSE_MAKEFILE OFF)
+set(CMAKE_VERBOSE_MAKEFILE ON)
 set(FBW_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 set(FBW_COMMON ${FBW_ROOT}/fbw-common/src/wasm)
 
@@ -11,32 +11,38 @@ include("${FBW_COMMON}/extra-backend/cmake/TargetDefinition.cmake")
 
 # compiler refinement
 set(COMPILER_FLAGS "-Wall -Wextra -Werror -Wno-unused-function -Wno-unused-command-line-argument -Wno-ignored-attributes -Wno-macro-redefined -target wasm32-unknown-wasi --sysroot \"${MSFS_SDK}/WASM/wasi-sysroot\" -mthread-model single -fno-exceptions -fms-extensions -fvisibility=hidden -ffunction-sections -fdata-sections -fno-stack-protector")
+
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMPILER_FLAGS}")
+set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3 -flto=full -DNDEBUG")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DDEBUG")
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMPILER_FLAGS}")
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3 -flto=full -DNDEBUG")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -DDEBUG")
 
 message("MSFS SDK: " ${MSFS_SDK})
 
 # add the include paths
 include_directories(
-    "${MSFS_SDK}/WASM/include"
-    "${MSFS_SDK}/WASM/wasi-sysroot/include"
-    "${MSFS_SDK}/WASM/wasi-sysroot/include/c++/v1"
-    "${MSFS_SDK}/SimConnect SDK/include"
-    "${FBW_COMMON}/extra-backend/lib"
-    "${FBW_COMMON}/extra-backend/MsfsHandler"
-    "${FBW_COMMON}/extra-backend/MsfsHandler/DataTypes"
+        "${MSFS_SDK}/WASM/include"
+        "${MSFS_SDK}/WASM/wasi-sysroot/include"
+        "${MSFS_SDK}/WASM/wasi-sysroot/include/c++/v1"
+        "${MSFS_SDK}/SimConnect SDK/include"
+        "${FBW_COMMON}/extra-backend/lib"
+        "${FBW_COMMON}/extra-backend/MsfsHandler"
+        "${FBW_COMMON}/extra-backend/MsfsHandler/DataTypes"
 )
 
 # add compiler definitions
 add_definitions(
-    -D_MSFS_WASM=1
-    -D__wasi__
-    -D_LIBC_NO_EXCEPTIONS
-    -D_LIBCPP_HAS_NO_THREADS
-    -D_WINDLL
-    -D_MBCS
-    -DLOG_LEVEL=4
-    -DNO_EXAMPLES
+        -D_MSFS_WASM=1
+        -D__wasi__
+        -D_LIBC_NO_EXCEPTIONS
+        -D_LIBCPP_HAS_NO_THREADS
+        -D_WINDLL
+        -D_MBCS
+        -DLOG_LEVEL=5
+        -DEXAMPLES
 )
 
 # add the common components
