Moved the framework Example to the cpp-msfs-framework folder

--- a/fbw-a32nx/src/wasm/extra-backend/CMakeLists.txt
+++ b/fbw-a32nx/src/wasm/extra-backend/CMakeLists.txt
@@ -3,13 +3,13 @@ add_definitions(
 		# ZERO_LVL=0 CRITICAL_LVL=1 ERROR_LVL=2 WARN_LVL=3 INFO_LVL=4 DEBUG_LVL=5 VERBOSE=6 TRACE_LVL=7
 		-DLOG_LEVEL=4
 		# EXAMPLES | NO_EXAMPLES
-		-DNO_EXAMPLES
+		-DEXAMPLES
 )
 
 # add the local include directories
 include_directories(
+	${FBW_COMMON}/cpp-msfs-framework/
 	${CMAKE_CURRENT_SOURCE_DIR}/src
-	${CMAKE_CURRENT_SOURCE_DIR}/src/Example
 	${CMAKE_CURRENT_SOURCE_DIR}/src/AircraftPresets
 	${CMAKE_CURRENT_SOURCE_DIR}/src/LightingPresets
 	${CMAKE_CURRENT_SOURCE_DIR}/src/Pushback
@@ -18,15 +18,15 @@ include_directories(
 # define the source files
 set(SOURCE_FILES
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Gauge_Extra_Backend.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Example/ExampleModule.cpp
+	${FBW_COMMON}/cpp-msfs-framework/Example/ExampleModule.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/AircraftPresets/AircraftPresets.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/LightingPresets/LightingPresets.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Pushback/Pushback.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Pushback/InertialDampener.cpp
 )
 set(INCLUDE_FILES
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Example/ExampleModule.h
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/Example/longtext.h
+		../../../../fbw-common/src/wasm/cpp-msfs-framework/Example/ExampleModule.h
+		../../../../fbw-common/src/wasm/cpp-msfs-framework/Example/longtext.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/AircraftPresets/AircraftPresets.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/AircraftPresets/AircraftProcedures.h
     ${CMAKE_CURRENT_SOURCE_DIR}/src/LightingPresets/LightingPresets.h
