--- a/fbw-a32nx/src/wasm/CMakeLists.txt
+++ b/fbw-a32nx/src/wasm/CMakeLists.txt
@@ -1,7 +1,10 @@
 # folder structure
 set(OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../out/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel)
 
-add_subdirectory(extra-backend)
+# add compiler definitions
+add_definitions(-DA32NX)
+
+add_subdirectory(extra-backend-a32nx)
 
 # FIXME: remove the if-clause as soon as all components are using CMake
 if (WIN32)
