--- a/fbw-a32nx/src/wasm/extra-backend-a32nx/CMakeLists.txt
+++ b/fbw-a32nx/src/wasm/extra-backend-a32nx/CMakeLists.txt
@@ -1,7 +1,9 @@
+# extra-backend-a32nx CMakeLists.txt
+
 # add additional compiler definitions for the a32nx extra-backend build
 add_definitions(
     # ZERO_LVL=0 CRITICAL_LVL=1 ERROR_LVL=2 WARN_LVL=3 INFO_LVL=4 DEBUG_LVL=5 VERBOSE=6 TRACE_LVL=7
-    -DLOG_LEVEL=5
+    -DLOG_LEVEL=4
     # EXAMPLES | NO_EXAMPLES
     -DNO_EXAMPLES
 )
