rename folder to localization for consistency

--- a/.github/workflows/localization.yml
+++ b/.github/workflows/localization.yml
@@ -16,10 +16,10 @@ jobs:
           persist-credentials: false
       - name: Install Localazy CLI
         run: npm install -g @localazy/cli
-      - name: Download Translations
-        run: cd fbw-a32nx/src/localisation && node build-flypad-translation.js
-      - name: Download Translations
-        run: cd fbw-a32nx/src/localisation && node build-lokPak-translation.js
+      - name: Download flyPad Translations
+        run: cd fbw-a32nx/src/localization && node build-flypad-translation.js
+      - name: Download locPak Translations
+        run: cd fbw-a32nx/src/localization && node build-locPak-translation.js
       - name: Print git status
         run: git status
       - name: Create PR
@@ -27,7 +27,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          path: fbw-a32nx/src/localisation
+          path: fbw-a32nx/src/localization
           branch: localazy-update # Specify branch that this action uses.
           commit-message: 'automatically updated FlyByWire localization'
           title: 'build: update FlyByWire localization'
