feat(fms): radio navigation v0.5 (#7879)
* fix: coherent typings

* fix: ignore deltaTime too

* fix: bug in atsu page... this redraw is for radio nav only

* fix: add raw facility to waypoint

* fix: add nav 4 for mmr 2

* fix: type def

* chore: add array flat function

Unfortunately Coherent is just too old to have it in the std lib

* feat(db): load runways

* fix: better nav receiver defaults

* feat(fm): initial radio navigation

* doc: changelog

* fix: glideslope sign when using runway data

* fix: ils is always at the bottom of sel navaid

* fix: remove unused import

* fix: use new tuning var for sel navaids

* fix: ensure empty frequency is null

* fix: replace display vor when its reason goes away

* feat: support database switch state reset

* fix: lock mmr crs when below 700 ft

* fix: display vor tuning criteria

* fix: ils tuning criteria

* fix: reset selected ls on failure

* feat(fms): disable manual tuning, add message

* fix(fms): only show slope for ils appr or manual tune

* fix: unlatch specified ndb

* fix: tune adf1

* fix(fms): show vor/dme in vor/dme position mode

* fix(fms): ability to de-select ndb/loc/ils

* fix(cdu): sel navaids returns to pos monitor

* fix: remove dead code

* feat: no crs field for dme-only navaids

* fix: tweak los criteria

* fix: hack to work around lack of elevation data

* fix(mcdu): crs title not hidden

Check by a pilot.

---------

Co-authored-by: 2hwk <15316958+2hwk@users.noreply.github.com>

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/systems.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/systems.cfg
@@ -452,6 +452,8 @@ circuit.87 = Type:CIRCUIT_LIGHT_PANEL:9#Connections:bus.2#Power:2,5,20.0#Name:Em
 ; PARK BRK EXT LT
 circuit.88 = Type:CIRCUIT_LIGHT_RECOGNITION:1#Connections:bus.15#Power:1,2,5#Name:PARK_BRK_LT       ; DC GND FLT SVC PARK BRK LT
 
+circuit.89 = Type:CIRCUIT_NAV:4#Connections:bus.1#Power:4, 5, 20.0#Name:NAV4 ; NAV 4 (MMR2) 5W
+
 apu_pct_rpm_per_second = 1000 ; Set to 1000, meaning the APU starts and stops in 1 millisecond.
                               ; The WASM module manages the APU, but until integration of the whole pneumatic and electrical system is finished
                               ; we still need the sim's APU to provide pressure and electricity for us.
@@ -490,10 +492,10 @@ Audio.1 = 1
 Com.1 = 1, 1
 Com.2 = 1, 1
 Com.3 = 1, 1
-Nav.1 = 1, 1, 1
-Nav.2 = 1, 1, 1
-Nav.3 = 1, 1, 1
-Nav.4 = 1, 1, 1
+Nav.1 = 1, 1, 0 ; VOR1
+Nav.2 = 1, 1, 0 ; VOR2
+Nav.3 = 1, 1, 1 ; MMR1
+Nav.4 = 1, 1, 1 ; MMR2
 Adf.1 = 1
 Adf.2 = 1
 Transponder.1 = 1
