refactor(w&b):  rust refactor of payload management (#7715)
* feat(efb/wb): boarding.rs, Payload.tsx and related changes

* refactor: standardise units as kg

* refactor: setting A:PAYLOAD STATION WEIGHT in rs

* refactor: use uom for units instead of f64

* refactor: renamed to payload from boarding

* refactor: restore payload sync in .rs

* chore: fix diff

* refactor: remove pax target id

* fix: per pax weight tests

* fix: delete dead code

* fix: remove unused pax station vars

* fix: engine control hotfix

* fix: backport fixes

* fix: backport more changes

* feat: added gw cg, renamed simvar pax_flags_ to pax_

* feat: init changes for gw on payload page

* feat: switch to GW/GWCG

* fix: remove comments

* fix: changes for GSX

* fix: css font-mono

* feat: more gsx vars

* feat: complete gsx integration in rust

* chore: remove js bitflags

* fix: undo NXUnits change

* Tech Debt
- Seperated logic from tests

* Revert "chore: remove js bitflags"

This reverts commit 814c8fdea5222321803970c773a081acf90cf83c.

* fix: rust lint

* fix: rust lint

* fix: max gw and tooltips

* fix(efb): remove pseudo fuel calculation from payload for performance

* fix(cdu): wrong zfwcg calculation for payload manager utility

* GSX Implementation
- Added Temp test that checks halfway state of GSX

* refactor: review comments and gsx fixes

* fix: temporary workaround for deboarding cargo

* fix: fix tests

* POC to maintain state of cargo loaded for GSX boarding

* refactor: add trait to transfer number of pax to air cond

* GSX Implementation
- Created helper function to move all pax and cargo
- Fixed bug where GSX cargo removal was working in reverse order
- Further refined GSX tests

* fix: lint-rust.sh

* Merge branch 'master' into flypad-weight-balance-gsx

* refactor/fix(efb): new cg limits, unit conversion, simvar documentation, per pax/pax bag weight in kg

* fix: package.json


--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,7 @@
 /fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/model/*.bin
 /fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/model/*.gltf
 /fbw-a32nx/src/systems/instruments/aceBundles
+/fbw-a32nx/src/systems/instruments/buildSrc/custom/*
 
 /fbw-a32nx/src/localization/flypad/downloaded/*.json
 /fbw-a32nx/src/localization/msfs/downloaded/*.locPak
@@ -97,4 +98,5 @@ target/
 *.tgz
 *.wasm
 cmake-build*
+
 localazy.keys.json
