fix: update fuel system to include center tank transfer and crossfeed capability (#7817)
* feat(fuel): centre tank transfer and crossfeed

* Update CHANGELOG.md

* Update flight_model.cfg

* fix(fuel): centre tank transfer valve control

* fix(fadec): handle centre tank transfers properly

* fix(fuel): adjust centre tank low level

* fix(SD): centre tank transfer valves

* Update CHANGELOG.md

* fix(fuel): missing lines

* Small flight_model.cfg fixes

- Introduces missing Junction's input/ output connectors (all three Junctions)
- Triggers 5 & 6 are activating both Left and Right wing valves, when only one should be opened by trigger
- Introduced Center to Inner tank line fuel flows as IRL.

* Update flight_model.cfg

* Added SimVar definitions for the new Fuel logic

* Adapt to new fuel system & cross-feed transfer

* fix: include FuelFlowAt1PSI on lines 33 & 34

* fix: added Line Fuel Flow Simvar

* fix: valve logic and line flow ratios

- Included valve 11 & 12 within the transfer logic
- Implemented line fuel flow ratios

* fix: divide by zero issue on lineFlowRatio

Avoid divide by zero error and thus Sim freeze on the lineFlowRatio calculations.

* Update CHANGELOG.md

* Update flight_model.cfg

* Update flight_model.cfg

* Update flight_model.cfg

* Update flight_model.cfg

* Update Climb.flt

* Update approach.FLT

* Update apron.FLT

* Update cruise.FLT

* Update final.FLT

* Update flight_model.cfg

* Update hangar.flt

* Update runway.FLT

* Update taxi.flt

* Delete systems.cfg

* Add files via upload

* Update flight_model.cfg

* fix(fuel): remove extraneous #s

* fix(sd/fadec/ovhd): match new fuel config

* fix(fuel): jet pumps run whenever transfer is active

* Update apron.FLT

* Update Climb.flt

* Update approach.FLT

* Update cruise.FLT

* Update final.FLT

* Update runway.FLT

* Update taxi.flt

* Update hangar.flt

* fix: fuel used by the engine


--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/systems.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/systems.cfg
@@ -452,7 +452,13 @@ circuit.87 = Type:CIRCUIT_LIGHT_PANEL:9#Connections:bus.2#Power:2,5,20.0#Name:Em
 ; PARK BRK EXT LT
 circuit.88 = Type:CIRCUIT_LIGHT_RECOGNITION:1#Connections:bus.15#Power:1,2,5#Name:PARK_BRK_LT       ; DC GND FLT SVC PARK BRK LT
 
-circuit.89 = Type:CIRCUIT_NAV:4#Connections:bus.1#Power:4, 5, 20.0#Name:NAV4 ; NAV 4 (MMR2) 5W
+circuit.89 = Type:CIRCUIT_NAV:4#Connections:bus.1#Power:4, 5, 20.0#Name:NAV4 ; NAV 4 (MMR2) 5Wr
+; jet pump valves
+circuit.90 = Type:CIRCUIT_FUEL_VALVE:9#Connections:bus.2#Power:3, 5, 20.0#Name:Fuel_Valve_Center_Transfer_Disable_Left ; Fuel Valves 5W
+circuit.91 = Type:CIRCUIT_FUEL_VALVE:10#Connections:bus.2#Power:3, 5, 20.0#Name:Fuel_Valve_Center_Transfer_Disable_Right ; Fuel Valves 5W
+; overhead jet pump disable, implemented as separate valve to avoid interferring with trigger logic
+circuit.92 = Type:CIRCUIT_FUEL_VALVE:11#Connections:bus.1#Power:0, 0, 20.0#Name:Fuel_Valve_Auto_Center_Transfer_Left ; Fuel Valves 0W
+circuit.93 = Type:CIRCUIT_FUEL_VALVE:12#Connections:bus.1#Power:0, 0, 20.0#Name:Fuel_Valve_Auto_Center_Transfer_Right ; Fuel Valves 0W
 
 apu_pct_rpm_per_second = 1000 ; Set to 1000, meaning the APU starts and stops in 1 millisecond.
                               ; The WASM module manages the APU, but until integration of the whole pneumatic and electrical system is finished
