fix(displays): backlight bleed lighting cleanup and removed home cockpit mode (#7955)
* refactor: remove homecockpit mode and backlight, set all bg to #040404

fix: temporarily disable dmc maintenance modes

fix: forgot to remove code

* fix: lint

* fix: new mike glass

* fix: finaler mike glass comp

* fix: make switching branches easier

* fix: code review

* fix: removed elements

--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,9 @@
 
 # avoid issues when switching branches during transistion from old to new structure
 /src/
+/fbw-common/msfs-avionics-mirror/src/sdk/build
+/fbw-common/msfs-avionics-mirror/src/sdk/build/**
+/msfs-avionics-mirror/
 /flybywire-aircraft-a320-neo/
 /flybywire-aircraft-a320-neo-lock-highlight/
 
