--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,12 @@ add_definitions(
     -D_LIBCPP_HAS_NO_THREADS
     -D_WINDLL
     -D_MBCS
+    # ZERO_LVL=0 CRITICAL_LVL=1 ERROR_LVL=2 WARN_LVL=3 INFO_LVL=4 DEBUG_LVL=5 VERBOSE=6 TRACE_LVL=7
+    -DLOG_LEVEL=4
+    # EXAMPLES | NO_EXAMPLES
+    -DNO_EXAMPLES
+    # USE_TIMER | NO_TIMER - for logging of profiling information of pre-, post-, update() calls
+    -DUSE_TIMER
 )
 
 # add the common components
